fixed body height being cut off

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -15,6 +15,7 @@
 
 body{
   width: 100vw;
+  min-height: 100vh;
   padding: 80px 0;
   background: #F9FAFC;
   display: flex;
